# ocaml-accelerator

./: README.md  dune  ocaml-accelerator.opam
.github/workflows/: test_suite.yml
src/: dune  sample.ml
test/: dune  test_sample.ml
