opam-version: "2.0"
maintainer: "david-engelmann"
homepage: "https://github.com/david-engelmann/ocaml-accelerator"

bug-reports: "https://github.com/david-engelmann/ocaml-accelerator/issues"
dev-repo: "git+https://github.com/david-engelmann/ocaml-accelerator.git"
license: "MIT"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
depends: [
    "ocaml" {>= "4.14.0"}
    "core"
    "async"
    "dune" {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Quick Start for working with OCaml"
description: "
A template project for getting started with OCaml.
"
